# testable-singleton

./: CMakeLists.txt  isettings.h  main.cpp  pincode.cpp  pincode.h  settingsimpl.cpp  settingssingleton.cpp  settingssingleton.h
src/: CMakeLists.txt  main.cpp  pincode.cpp  settingsimpl.h  settingssingleton.cpp  settingssingleton.h
tests/: CMakeLists.txt  testpincode.cpp
